--- a/lab3-page3.html
+++ b/lab3-page3.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- 
-    EMMET COMMAND: 
+    EMMET COMMAND: form[action='test.php' method='post']>label[for='first']+br*2+inp[name='first' id='first']+br*2+label[for='last']+inp[name='last' id='last']br*2+label[for='age']+input[type='number' name='age' id='last']+br*2+input:submit[value='submit Form']
     -->
     <form action="test.php" method="POST">  
         <label for="first"></label>
